--- a/metthitrate.tex
+++ b/metthitrate.tex
@@ -1,6 +1,6 @@
 \begin{table}[ht]
 \centering
-\caption[Overall hit-rates for METT in the evaluation]{Overall hit-rate percentages for METT by emotion}
+\caption[Overall hit rate percentages for METT by emotion]{Overall hit rate percentages for METT by emotion}
 \label{table:metthitrate}
 \begin{tabular}{lr}
   \toprule
