--- a/result_implementation.tex
+++ b/result_implementation.tex
@@ -63,7 +63,7 @@ One with overall configuration global applicable to each trial and
 question of the experiment. This file is stored with the filename
 \texttt{options.json}.
 
-\begin{lstlisting}[caption=options.json Configuration file]
+\begin{lstlisting}[caption=options.json configuration file]
 {
   "NameOfTheExperiment": {
     "forward_mask_frames": 40
