--- a/speccorrmtx.tex
+++ b/speccorrmtx.tex
@@ -1,5 +1,5 @@
 \begin {table}[H]
-  \caption[Correlation matrix between the sub-scales of the SPEC for the present study]{Correlation matrix between the sub-scales of the SPEC, S. = Self, O. = Others}
+  \caption[Correlation matrix between the subscales of the SPEC for the present study]{Correlation matrix between the subscales of the SPEC, S. = Self, O. = Others}
 \label{table:speccorrmtx}
 \begin{tabularx}{\textwidth}{lrrrrrrrrrrr}
 \toprule
@@ -24,7 +24,7 @@ Use O.            & .01 & -.11 & .00 & -.23 & -.14 & -.05 & .19 & -.28 & .01 &  
 
 
 \begin {table}[H]
-  \caption{Correlations between the SPEC sub-scales and the METT, and test-retest correlations for SPEC}
+  \caption{Correlations between the SPEC subscales and the METT, and test-retest correlations for SPEC}
   \label{table:specmettcorr}
   \begin{tabularx}{\textwidth}{lrr}
     \toprule
