--- a/stimsets.tex
+++ b/stimsets.tex
@@ -1,5 +1,5 @@
 \begin {table}[H]
-  \caption{Common stimulus-sets for facial expression}
+  \caption{Common stimulus sets for facial expressions}
 \label{table:stimsets}
   \begin{tabularx}{\textwidth}{lllll}
     & \textbf{$N_{models}$} & \textbf{$N_{expressions}$} & \textbf{$N_{angles}$} & \textbf{Ethnicities} \\
