--- a/testretest.tex
+++ b/testretest.tex
@@ -1,5 +1,5 @@
 \begin {table}[H]
-  \caption{Test-retest correlations and signifcance levels for the METT}
+  \caption{Test-retest correlations and significance levels for the METT}
   \label{table:metttestretest}
   \begin{tabularx}{\textwidth}{lrr}
     \toprule
