--- a/meta.tex
+++ b/meta.tex
@@ -19,7 +19,7 @@
 
 \firstAuthorEmail{wru@dsv.su.se}              % First author's e-mail address
 
-\thesisTitle{A Novel, multi-task method for computerized testing of Emotional Intelligence}                   % The title of the thesis
+\thesisTitle{A Novel, multitask method for computerized testing of Emotional Intelligence}                   % The title of the thesis
 \thesisSubtitle{Subtitle of the thesis, if any} % The subtitle of the thesis
 
 \thesisSubject{Human-Computer Interaction}   % May be changed
