--- a/result_implementation.org
+++ b/result_implementation.org
@@ -4,9 +4,9 @@ configuration, deployment scripts and text assets. These components
 are replaceable with other components on an as-needed basis. A
 graphical representation of the module dependencies is presented in
 figure \ref{fig:modules}. In the coming sections the developed
-artefact will be discussed in detail.
+artifact will be discussed in detail.
 
-The artefact developed does to a large extent not use the object
+The artifact developed does to a large extent not use the object
 oriented paradigm of software development, instead, a design based on
 modules containing functions were used. Where possible unnessary
 modifications of state were avoided. Indeed, outside of functions
@@ -14,7 +14,7 @@ interacting concerned with screen rendering, input management and
 input and output, state is not modified. Additionally, inputs were
 read once and not mutated after creation, outputs only written once
 and screen rendering produced no alternations of state as visible to
-the main artefact. After configuration, the only state read is user
+the main artifact. After configuration, the only state read is user
 input from the keyboard.
 
 #+BEGIN_LATEX
@@ -38,11 +38,11 @@ input from the keyboard.
         }
       };
     \end{tikzpicture}
-    \caption{Graph of dependencies in the software artefact}
+    \caption{Graph of dependencies in the software artifact}
   \end{figure}
 #+END_LATEX
 
-* Software support for artefact configuration
+* Software support for artifact configuration
   The Pyton modules expects configuration in the JavaScript Object
   Notation (JSON). These configuration artifacts consists of three
   separate files.
@@ -82,7 +82,7 @@ input from the keyboard.
   questions for SPEC, and the keymaps coding keypreses to responses,
   an example of this file is shown in listing \ref{lst:questions}.
 
-  \begin{lstlisting}[caption={\texttt{questions.json} questions specification file},label={lst:questions}]
+  \begin{lstlisting}[caption={\texttt{questions.json} question specification file},label={lst:questions}]
   {
     "NameOfTheExperiment": [
        {
@@ -98,7 +98,7 @@ input from the keyboard.
   }
   \end{lstlisting}
 
-* Tools for artefact deployment
+* Tools for artifact deployment
   To simplify the configuration and use of the system a number of
   utility scripts were developed, including scripts for generating
   subsets of the RaFD, starting the system in a given configuration
@@ -153,7 +153,7 @@ input from the keyboard.
   one-row per trial data-set, which is then serialize and saved to
   disk as a comma separated values file.
 
-* Questionarie module
+* Questionnaire module
   After the METT module has completed its work the questionarie module
   is initialized, each question consists of three components, a
   \texttt{question-id} which is simply logged to the output, a text description
@@ -189,7 +189,7 @@ input from the keyboard.
   #+END_LATEX
 
   #+BEGIN_LATEX
-  \begin{lstlisting}[caption={Excerpt of a questionnarie output file: first three lines},label={lst:resultquestionnarie}]
+  \begin{lstlisting}[caption={Excerpt of a questionnaire output file: first three lines},label={lst:resultquestionnarie}]
   question_id,value,rt
   0,3,1.4653780460357666
   1,3,0.08734989166259766
